Code/ROS2_Code/roverbrain_ws/log/build_2025-07-24_07-39-36/roverbrain_pkg/stderr.log
  File "/home/rover/roverbrain_ws/install/roverbrain_pkg/lib/python3.12/site-packages/roverbrain_pkg/steering_control.py", line 23
    if (target_angle < -50.0 or target_angle > 50.0)
                                                    ^
SyntaxError: expected ':'

